@@ -27,6 +27,9 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.message" id="msg_statement_delete_cancel">
             <field name="text">To delete statement "%(statement)s" you must cancel it.</field>
         </record>
+        <record model="ir.message" id="msg_statement_invoice_paid_cancelled">
+            <field name="text">The validation of the statements will remove already paid or cancelled invoices from the statements' lines.</field>
+        </record>
         <record model="ir.message" id="msg_statement_paid_invoice_draft">
             <field name="text">The validation of the statements will remove paid invoices from other statements.</field>
         </record>
