@@ -1,3 +1,4 @@
+* Warn user when posting a statement with cancelled or paid invoices
 * Fill move line's origin with statement line
 
 Version 5.8.0 - 2020-11-02
